--- a/style.css
+++ b/style.css
@@ -87,10 +87,8 @@ body {
   border: none;
   border-radius: 5px;
   padding: 3px 15px;
+  border: 3px solid #fec134;
   transition: background-color 100ms;
-}
-.districts__search-input:focus {
-  background-color: #fec134;
 }
 .districts__search-description {
   font-size: 16px;
