--- a/style.scss
+++ b/style.scss
@@ -97,10 +97,11 @@ body {
     border: none;
     border-radius: 5px;
     padding: 3px 15px;
+    border: 3px solid $c-yellow;
     transition: background-color 100ms;
 
     &:focus {
-      background-color: $c-yellow;
+      // background-color: $c-yellow;
     }
   }
 
