--- a/style.css
+++ b/style.css
@@ -107,12 +107,12 @@ body {
   display: flex;
 }
 .districts__heading-item {
-  width: 80%;
+  width: 60%;
   display: block;
   padding: 10px 20px;
 }
 .districts__heading-item--district-number {
-  width: 20%;
+  width: 40%;
   text-align: center;
   margin-right: 5px;
 }
@@ -127,12 +127,13 @@ body {
   border: 2px solid #fec134;
 }
 .districts__item {
-  width: 80%;
+  width: 60%;
   display: block;
   padding: 10px 20px;
 }
 .districts__item--district-number {
-  width: 20%;
+  word-break: break-all;
+  width: 40%;
   text-align: center;
   font-weight: bold;
   font-size: 30px;
