--- a/style.scss
+++ b/style.scss
@@ -122,6 +122,8 @@ body {
     font-size: 20px;
     width: 100%;
     display: flex;
+
+    @include tablet {}
   }
 
   &__heading-item {
@@ -134,6 +136,19 @@ body {
       text-align: center;
       margin-right: 5px;
     }
+
+    &--district-number, &--street {
+      @include tablet {
+        display: none;
+      }
+    }
+
+    &--both {
+      display: none;
+      @include tablet {
+        display: block;
+      }
+    }
   }
   
   &__items-wrapper {
@@ -141,10 +156,14 @@ body {
     display: flex;
     background-color: $c-yellow;
     font-size: 26px;
+    font-weight: bold;
     margin-top: 10px;
     border-radius: 5px;
     align-items: center;
     border: 2px solid $c-yellow;
+    @include tablet {
+      flex-direction: column;
+    }
   }
 
   &__item {
@@ -152,8 +171,12 @@ body {
     display: block;
     padding: 10px 20px;
 
+    @include tablet {
+      width: 100%;
+      text-align: center;
+    }
+
     &--district-number {
-      word-break: break-all;
       width: 40%;
       text-align: center;
       font-weight: bold;
@@ -163,6 +186,10 @@ body {
       border-radius: 5px;
       margin: 5px;
       border: 2px solid $c-white;
+      @include tablet {
+        font-size: 24px;
+        width: 100%;
+      }
     }
   }
 }
